--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 # ---------------------------------------------------------------
 
 # Site
-title: RenShuo
-subtitle: renshuo's blog
+title: renshuo
+subtitle: blog
 description: Write the Code,Save the Wrold.
 author: renshuo
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
