--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # Site
 title: renshuo
 subtitle: blog
-description: Write the Code,Save the Wrold.
+description: 个人笔记整理
 author: renshuo
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
