--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ url: "https://renshuo555.github.io" # the base hostname & protocol for your site
 permalink: /:year/:month/:day/:title/
 
 # other links
-#twitter_username: gaohaoyang126
-#facebook_username: gaohaoyang.water
+#twitter_username: 
+facebook_username: renshuo555
 github_username:  renshuo555
 email: renshuo555@126.com
 weibo_username: 3253643851
-#zhihu_username: gaohaoyang
-#linkedIn_username: gaohaoyang
+#zhihu_username: 
+#linkedIn_username: 
 dribbble_username:
 
 description_footer: 个人笔记整理
